--- a/src-pos/uk/chromis/pos/panels/JPanelCloseMoney.form
+++ b/src-pos/uk/chromis/pos/panels/JPanelCloseMoney.form
@@ -978,7 +978,9 @@
                 </Container>
                 <Component class="javax.swing.JCheckBox" name="jCheckBox1">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="edit stored"/>
+                    <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                      <Connection code="AppLocal.getIntString(&quot;label.editstored&quot;)" type="code"/>
+                    </Property>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCheckBox1ActionPerformed"/>
