--- a/src-pos/uk/chromis/pos/sales/JPanelTicket.form
+++ b/src-pos/uk/chromis/pos/sales/JPanelTicket.form
@@ -584,7 +584,7 @@
                     <Component class="javax.swing.JButton" name="m_checkStock">
                       <Properties>
                         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/uk/chromis/images/search32xs.png"/>
+                          <Image iconType="3" name="/uk/chromis/images/pay.png"/>
                         </Property>
                         <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                           <ResourceString bundle="pos_messages.properties" key="tiptext.productsearch" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
